--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <title>Bus Mall</title>
-    <link rel="stylesheet" type="text/css" href="C:\Users\Admin\Documents\summer1\market-analysis-app\css\style.css">
-    <script type="text/javascript" src="app.js"></script>
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
     <header>
@@ -12,7 +11,7 @@
         <p>Welcome to Bus Mall! Vote on your favorite products elements can even be nested inside each other. For example, a blog post 
             might live inside one element and each comment on the article could live inside its own child element.</p>
         <nav>
-            <ul>
+            <ul id="nav-text">
                 <li>About</li>
                 <li>Companies</li>
                 <li>Tri-Met</li>
@@ -20,11 +19,10 @@
         </nav>
     </header>
     <div id="wrapper">
-        <section  class="images">
-            <img id="pic-one">
-            <img>
-            <img>
+        <section id="img-container">
+    
         </section>
     </div>
+    <script type="text/javascript" src="./js/app.js"></script>
 </body>
 </html>
