Centered nav li elements, all three pics are hearing clicks.

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
-    <header>
+    <header id='header'>
         <h1 id="busy">Bus Mall</h1>
         <img id="bus">
         <p>Welcome to Bus Mall! Vote on your favorite products elements can even be nested inside each other. For example, a blog post 
             might live inside one element and each comment on the article could live inside its own child element.</p>
-        <nav>
+        <nav id='nav'>
             <ul id="nav-text">
-                <li>About</li>
-                <li>Companies</li>
+                <li><a href="hey.html">About</a></li>
+                <li>Partners</li>
                 <li>Tri-Met</li>
             </ul>
         </nav>
