--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
     
         </section>
     </div>
+    <div id="chartContainer"></div>
     <hr>
+    <script src="canvasjs.min.js"></script>
+    <script src="chart.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
 </body>
 </html>
