--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </div>
     <div id="chartContainer"></div>
     <hr>
-    <script src="C:\Users\Admin\Documents\summer1\market-analysis-app\js\canvasjs.min.js"></script>
-    <script src="C:\Users\Admin\Documents\summer1\market-analysis-app\js\chart.js"></script>
+    <script src="./js/canvasjs.min.js"></script>
+    <script src="./js/chart.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
 </body>
 </html>
